# SeeNote

./: .gitignore  AnnotationWindow.tsx  App.tsx  CLAUDE.md  FILEMAP.md  MultiTierSpectrogramCache.ts  README.md  SingleFileWindow.tsx  SpectrogramChunkCache.ts  TERMS.md  TODO.md  VERIFICATION.md  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  review.md  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
components/: AnnotationToolEditModal.tsx  AnnotationToolLibrary.tsx  AnnotationToolsPanel.tsx  AnnotationToolsSettingsModal.tsx  BrightnessContrastPad.tsx  BuzzdetectPanel.tsx  CanvasVideoPlayer.tsx  CollapsedToolsRail.tsx  CollapsibleSection.tsx  CopyEditor.tsx  CreateProjectModal.tsx  DebugConsole.tsx  DeleteToolConfirmDialog.tsx  DirectoryField.tsx  DraftNumberInput.tsx  ExampleSpectrogram.tsx  FileBrowser.tsx  FileTree.tsx  FindLabelModal.tsx  GitSyncSetupModal.tsx  GitSyncUserFields.tsx  GradientPicker.tsx  GradientProjectName.tsx  HelpAnchor.tsx  HelpPanel.tsx  KeyboardShortcutsView.tsx  LaunchScreen.tsx  LevelRangeSlider.tsx  MassRenameModal.tsx  ProjectBaseFields.tsx  ProjectSettingsModal.tsx  RepairProjectModal.tsx  SettingsModalShell.tsx  Spectrogram.tsx  ToolCell.tsx  Toolbar.tsx  TooltipLayer.tsx  VideoPane.tsx  VideoPlayer.tsx  VideoZoomLayer.tsx  (+1 more)
copy/: help.ts  index.ts  overrideStore.ts  registry.ts  tooltips.ts  ui.ts
debug_video/: instructions.md  interpretation.md
docs/: _quarto.yml  annotation-workflow.qmd  classification-dictionary.qmd  dictionary.qmd  downloads.qmd  index.qmd  orientation.qmd  styles.css  tips-for-annotating.qmd  workflow.qmd
hooks/: useActivationStack.ts  useAnnotationHistory.ts  useAnnotationLoad.ts  useAnnotationTools.ts  useBandPassFilter.ts  useBuzzdetect.ts  useChunkRenderer.ts  useCopyEditorBridge.ts  useExamplePlayer.ts  useFileNavigation.ts  useHotkeys.ts  useImportAnnotations.ts  useOsOpenFile.ts  usePanelLayout.ts  usePlaybackTransport.ts  useProjectPersistence.ts  useProjects.ts  useRecentFiles.ts  useSpectrogramInteraction.ts  useSpectrogramZoomHotkeys.ts  useSyncManagement.ts  useVideoFrameSource.ts
scripts/: apply-copy-overrides.js  find-unmigrated-copy.mjs  sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: apply-copy-overrides.js
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: decoder.rs  fft.rs  mod.rs
src-tauri/src/commands/: annotation_tools.rs  audio.rs  buzzdetect.rs  credentials.rs  filesystem.rs  git_sync.rs  mod.rs  projects.rs  shared.rs  video_server.rs  window.rs
src-tauri/src/commands/git_sync/: annotate.rs  auth.rs  merge.rs  mod.rs  remote.rs  repo.rs
tests/: annotationMerge.test.ts  annotationPersist.test.ts  annotationRename.test.ts  annotationTools.test.ts  audioProcessing.test.ts  binIndex.test.ts  currentTimeStore.test.ts  gitSync.test.ts  helpers.test.ts  normalizeGain.test.ts  platform.test.ts  projectPaths.test.ts  setup.ts  spectrogramCache.test.ts  videoZoom.test.ts  viewportTransform.test.ts
utils/: AudioEngine.ts  (+27 more)
(+7 files in other folders)
