[package]
name = "seenote"
version = "0.2.0"
edition = "2021"

[lib]
name = "seenote_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "ogg", "vorbis", "isomp4", "mkv"] }
rustfft = "6"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSArray", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSOpenPanel", "NSSavePanel", "NSPanel", "NSWindow", "NSResponder", "NSApplication"] }
dispatch = "0.2"
