[package]
name = "seenote"
version = "0.5.1"
edition = "2021"

[lib]
name = "seenote_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "ogg", "vorbis", "isomp4", "mkv"] }
rustfft = "6"
anyhow = "1"
