[package]
name = "seenote"
version = "0.8.0"
edition = "2021"

[lib]
name = "seenote_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
# Backend features are required: without one, keyring v3 links a mock in-memory
# store that drops the credential between Entry instances (saves "succeed" but
# reads return nothing). Each dep is target-gated, so all three are safe to
# enable together; crypto-rust avoids a system openssl dependency on Linux CI.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "ogg", "vorbis", "isomp4", "mkv"] }
rustfft = "6"
rayon = "1"
anyhow = "1"
# Embedded git (libgit2) for annotation sync. Vendored + bundled so no system
# git is required on any platform (Windows users especially). Used by
# commands/git_sync.rs.
# `https` is required for TLS — without it libgit2 cannot talk to https:// remotes
# ("there is no TLS stream available"). default-features is off to drop the `ssh`
# feature (unused; avoids a libssh2 build dep), so https must be listed explicitly.
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https"] }
